# cpuid-C

./: CMakeLists.txt  main.c  readme.md
cpuid/: CMakeLists.txt  cpu_id.h  cpuid.c  cpuid_constants.c  cpuid_constants.h
